# raibis-lifeos

./: .gitignore  CHANGELOG.md  INCREMENTS.md  Makefile  OBSIDIAN_MAPPING.md  QuickSetup.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WIDGETS.md  notion-raibis-design.md  raibis-lifeos-notionpattern.md
.claude/: settings.local.json
raibis/: .env.example  .gitignore  README.md  pyproject.toml
raibis-go/: .env.example  Makefile  README.md  go.mod  go.sum
raibis-go/cmd/lifeos/: main.go  server.go  tui.go
raibis-go/cmd/server/: main.go
raibis-go/cmd/tui/: main.go
raibis-go/internal/cmdutil/: paths.go
raibis-go/internal/domain/: automation.go  comment.go  custom_entity.go  enums.go  goal.go  habit.go  note.go  page.go  project.go  props.go  sprint.go  task.go  taxonomy.go
raibis-go/ui-tauri/: README.md
raibis-tauri/: PACKAGING.md  package-lock.json  package.json
raibis-tauri/src-tauri/: Cargo.toml  tauri.conf.json
raibis-tauri/src-tauri/capabilities/: default.json
raibis-tauri/src-tauri/src/: lib.rs  main.rs
raibis/gui/: package-lock.json  package.json  server.js
raibis/gui/public/: app.js  design-system.css  index.html  style.css
raibis/raibis/: config.py
raibis/raibis/ai/: anthropic.py  base.py  factory.py  google.py  ollama.py  openai.py
raibis/raibis/db/: database.py  schema.sql
raibis/raibis/models/: __init__.py
raibis/raibis/tui/: app.py
raibis/raibis/tui/screens/: dashboard.py  goals.py  kanban.py  pomodoro.py  projects.py  resources.py  sprint.py
raibis/raibis/tui/widgets/: ai_sidebar.py  task_card.py
(+33 files in other folders)
