[package]
name = "raibis-lifeos"
version = "1.0.5"
edition = "2021"
rust-version = "1.77"

[lib]
name = "raibis_lifeos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # strip exception handling overhead
codegen-units = 1 # maximum optimization
lto = true        # link-time optimization
opt-level = "s"   # optimize for size (macOS bundles should be lean)
strip = true      # strip debug symbols
